fixed visualisation on scrolling, added not rendering unvisible visualisation

--- a/libraries/regex-visualisation/src/styles/debugger.less
+++ b/libraries/regex-visualisation/src/styles/debugger.less
@@ -21,6 +21,7 @@
     align-items: center;
     justify-content: center;
     tab-size: 1;
+    z-index: 3;
 
     & .tab-symbol{
         font-size: 16px;
@@ -31,9 +32,9 @@
 
     & .new-line-symbol{
         pointer-events: none;
-        display: inline;
+        display: inline-block;
         position: relative;
-        padding-right: .5rem;
+        width: .5rem;
     }
 
     & .new-line-symbol::before {
