--- a/libraries/regex-visualisation/src/styles/main.less
+++ b/libraries/regex-visualisation/src/styles/main.less
@@ -35,6 +35,7 @@ body {
         white-space: break-spaces;
         tab-size: 2;
         line-height: 21px;
+        padding: 0 0 0 10px;
 
         caret-color: var(--vscode-editorCursor-foreground, white);
         color: var(--vscode-editor-foreground, @light-color);
@@ -54,18 +55,17 @@ body {
         box-sizing: border-box;
         display: flex;
         max-width: 100%;
-        padding: 10px;
+        padding: 10px 10px 10px 0;
         background: #00000066;
         border-radius: 10px;
     }
 
     & #match-wrapper{
         height: 60vh;
-        padding: 10px 10px 40px 10px;
+        padding: 10px 10px 40px 0;
 
         & > span {
             width: 100%;
-            border-bottom: 1px solid #BBBBFF30;
         }
     }
 
@@ -209,6 +209,7 @@ body.vscode-light {
     left: 10px;
     width: 20px;
     height: 20px;
+    z-index: 2;
 }
 
 .match-info
@@ -216,7 +217,12 @@ body.vscode-light {
     position: absolute;
     bottom: 0;
     right: 0;
-    display: flex;
+    display: flex;    
+    width: -webkit-fill-available;
+    justify-content: right;
+    border-top: 1px solid #BBBBFF30;
+    margin: 0 10px;
+    box-sizing: content-box;
 
     & > .match-steps{
         display: flex;
